<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuildWars 2 API Explorer</string>
    <string name="items">Items</string>
    <string name="dynamic_events">Dynamic Events</string>
    <string name="recipes">Recipes</string>
    <string name="wvwvw">WvWvW</string>
    <string name="dialog_crash_title">Whoops!</string>
    <string name="dialog_crash_message">Seems like the app did crash last time you were using it. Do
        you want to submit
        a ticket to our issue tracker?
    </string>
    <string name="refresh">Refresh</string>
    <string name="toast_error_getting_match_details">Error getting match details!</string>
    <string name="search_by_id_hint">I know it sucks, but this is the only API that is offered right
        now... :( Search by
        ID... Who did come up with this? :( Pretty unusable like that...
    </string>
    <string name="search">Search</string>
    <string name="toast_error_getting_item_details">Error getting item detail!</string>
    <string name="toast_error_getting_recipe_details">Error getting recipe detail!</string>
    <string name="pref_wvwvw_refresh_disabled">Disabled</string>
    <string name="pref_wvwvw_refresh_30">30 Seconds</string>
    <string name="pref_wvwvw_refresh_60">1 Minute</string>
    <string name="pref_wvwvw_refresh_120">2 Minutes</string>
    <string name="pref_wvwvw_refresh_180">3 Minutes</string>
    <string name="pref_wvwvw_refresh_300">5 Minutes</string>
    <string name="pref_wvwvw_refresh_title">WvWvW Auto Refresh Interval</string>
    <string name="change_home_world">Change Home World</string>
    <string name="id_list_hint">If you\'re interested in the list of IDs anyway, here it is...
    </string>
    <string name="loading">Loading...</string>
    <string name="no_items">No Items</string>
    <string name="no_recipes">No Recipes</string>
    <string name="pref_events_refresh_title">Events Auto Refresh Interval</string>
    <string name="url_issue_tracker">https://github.com/Goddchen/GuildWars2-API-Explorer/issues
    </string>
    <string name="pref_general">General</string>
    <string name="pref_version">Version</string>
    <string name="pref_contact">Contact developer</string>
    <string name="pref_contact_summary">Send an email to me :)</string>
    <string name="pref_rate_title">Rate</string>
    <string name="pref_rate_summary">Rate this app in the Play Store</string>
    <string name="pref_issue_title">Issue tracker</string>
    <string name="pref_issue_summary">Show the issue tracker</string>
    <string name="colors">Colors (Dyes)</string>
    <string name="build">Build</string>
    <string name="toast_only_digits">Only digits are allowed!</string>
    <string name="toast_error_loading_data">Error loading data</string>
    <string name="label_consumable">Consumable</string>
    <string name="consumable_type">Type: %s</string>
    <string name="consumable_description">Description: %s</string>
    <string name="consumable_duration">Duration: %.02f minute(s)</string>
    <string name="item_name">Name: %s</string>
    <string name="item_description">Description: %s</string>
    <string name="item_type">Type: %s</string>
    <string name="item_level">Level: %d</string>
    <string name="item_rarity">Rarity: %s</string>
    <string name="item_vendor_value">Vendor value: %d</string>
    <string name="item_game_types">Game types: %s</string>
    <string name="item_flags">Flags: %s</string>
    <string name="item_restrictions">Restrictions: %s</string>
    <string name="item_crafting_material">Crafting material: %s</string>
    <string name="recipe_type">Type: %s</string>
    <string name="recipe_output_item">Output item: %s</string>
    <string name="recipe_output_item_count">Output item count: %d</string>
    <string name="recipe_min_rating">Min. rating: %d</string>
    <string name="recipe_time_to_craft">Time to craft (ms): %d</string>
    <string name="recipe_disciplines">Disciplines: %s</string>
    <string name="recipe_flags">Flags: %s</string>
    <string name="match_start_time">Start: %s</string>
    <string name="match_end_time">End: %s</string>
    <string name="maps">Maps</string>
    <string name="toast_no_search_results">No search results</string>
    <string name="please_wait">Please wait...</string>
    <string name="toast_use_map_once">Please load the map at least once before using this feature
    </string>
    <string name="format_progress_int" formatted="false">%d of %d</string>
    <string name="hint_search">Name</string>
    <string name="action_sync">Sync</string>
    <string name="confirm_sync">This will download thousands of objects.\nContinue?</string>
    <string name="hint_item_query">Search for name</string>
    <string name="hint_recipe_query">Search for name</string>

</resources>
