<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="a1519cbaa10f9ae"
        ads:adSize="BANNER"
        ads:loadAdOnCreate="true"/>

    <Button
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_events"/>


    <Button
        android:id="@+id/wvwvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wvwvw"
        android:enabled="false"/>

    <Button
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:enabled="false"/>

    <Button
        android:id="@+id/recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        android:enabled="false"/>

</LinearLayout>